Bug 1875407 downgrade MediaTrackGraph shutdown diagnostic assertion to MOZ_ASSERT() r=padenot

We have plenty of crashes from Nightly users to investigate.
Leaving the MOZ_ASSERT() in place will catch any instances in CI.

Differential Revision: https://phabricator.services.mozilla.com/D199192